<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.FirstFragment">

    <ImageView
        android:id="@+id/ivFirstFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.8"
        android:scaleType="fitXY"
        android:src="@drawable/weather"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btMoscow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="38dp"
        android:backgroundTint="@color/card_view"
        android:text="@string/btCity_Moscow"
        android:fontFamily="@font/aleo_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btLondon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/card_view"
        android:text="@string/btCity_London"
        android:fontFamily="@font/aleo_bold"
        app:layout_constraintEnd_toEndOf="@+id/btMoscow"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/btMoscow"
        app:layout_constraintTop_toBottomOf="@+id/btMoscow" />

    <Button
        android:id="@+id/btNewYork"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/card_view"
        android:text="@string/btCity_NewYork"
        android:fontFamily="@font/aleo_bold"
        app:layout_constraintEnd_toEndOf="@+id/btLondon"
        app:layout_constraintStart_toStartOf="@+id/btLondon"
        app:layout_constraintTop_toBottomOf="@+id/btLondon" />

    <Button
        android:id="@+id/btParis"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/card_view"
        android:text="@string/btCity_Paris"
        android:fontFamily="@font/aleo_bold"
        app:layout_constraintEnd_toEndOf="@+id/btNewYork"
        app:layout_constraintStart_toStartOf="@+id/btNewYork"
        app:layout_constraintTop_toBottomOf="@+id/btNewYork" />

    <Button
        android:id="@+id/btBerlin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/card_view"
        android:text="@string/btCity_Berlin"
        android:fontFamily="@font/aleo_bold"
        app:layout_constraintEnd_toEndOf="@+id/btParis"
        app:layout_constraintStart_toStartOf="@+id/btParis"
        app:layout_constraintTop_toBottomOf="@+id/btParis" />

    <Button
        android:id="@+id/btRome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/card_view"
        android:text="@string/btCity_Rome"
        android:fontFamily="@font/aleo_bold"
        app:layout_constraintEnd_toEndOf="@+id/btBerlin"
        app:layout_constraintStart_toStartOf="@+id/btBerlin"
        app:layout_constraintTop_toBottomOf="@+id/btBerlin" />

    <Button
        android:id="@+id/btBeijing"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/card_view"
        android:text="@string/btCity_Beijing"
        android:fontFamily="@font/aleo_bold"
        app:layout_constraintEnd_toEndOf="@+id/btRome"
        app:layout_constraintStart_toStartOf="@+id/btRome"
        app:layout_constraintTop_toBottomOf="@+id/btRome" />

    <Button
        android:id="@+id/btTokyo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/card_view"
        android:text="@string/btCity_Tokyo"
        android:fontFamily="@font/aleo_bold"
        app:layout_constraintEnd_toEndOf="@+id/btBeijing"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/btBeijing"
        app:layout_constraintTop_toBottomOf="@+id/btBeijing" />

    <Button
        android:id="@+id/btCairo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/card_view"
        android:text="@string/btCity_Cairo"
        android:fontFamily="@font/aleo_bold"
        app:layout_constraintEnd_toEndOf="@+id/btBeijing"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/btBeijing"
        app:layout_constraintTop_toBottomOf="@+id/btTokyo" />

    <Button
        android:id="@+id/btMadrid"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/card_view"
        android:text="@string/btCity_Madrid"
        android:fontFamily="@font/aleo_bold"
        app:layout_constraintEnd_toEndOf="@+id/btBeijing"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/btBeijing"
        app:layout_constraintTop_toBottomOf="@+id/btCairo" />


</androidx.constraintlayout.widget.ConstraintLayout>